--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,8 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
